# roam-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  PLAN-multiline-capture.md  PLAN-quick-capture.md  README.md  cli_test_commands.txt  config.py  curl_test_commands.txt  markdown_utils.py  pyproject.toml  roam_api.py  server.py  setup.py  test_client.py  test_client_simple.py  test_mcp_tools.py  test_roam_api.py
.github/workflows/: ci.yml
documentation/: Roam_Research_Datalog_Cheatsheet.md  roam.md
reference/: roam-backend-api.md
reference/example-roam-research-mcp-js/: CHANGELOG.md  package.json  tsconfig.json
reference/example-roam-research-mcp-js/src/: types.d.ts
reference/example-roam-research-mcp-js/src/config/: environment.ts
reference/example-roam-research-mcp-js/src/search/: datomic-search.ts  hierarchy-search.ts  index.ts  types.ts
reference/example-roam-research-mcp-js/src/server/: roam-server.ts
reference/example-roam-research-mcp-js/src/tools/helpers/: refs.ts
reference/example-roam-research-mcp-js/src/tools/operations/: blocks.ts  outline.ts  todos.ts
reference/example-roam-research-mcp-js/src/tools/operations/search/: types.ts
reference/example-roam-research-mcp-js/src/tools/types/: index.ts
reference/roam-research-mcp-js/: .gitignore  LICENSE  README.md  package-lock.json
reference/roam-research-mcp-js/src/: index.ts  markdown-utils.ts
reference/roam-research-mcp-js/src/search/: block-ref-search.ts  status-search.ts  tag-search.ts  text-search.ts  utils.ts
reference/roam-research-mcp-js/src/tools/: schemas.ts  tool-handlers.ts
reference/roam-research-mcp-js/src/tools/helpers/: text.ts
reference/roam-research-mcp-js/src/tools/operations/: memory.ts  pages.ts
reference/roam-research-mcp-js/src/tools/operations/search/: handlers.ts  index.ts
reference/roam-research-mcp-js/src/types/: roam.ts
reference/roam-research-mcp-js/src/utils/: helpers.ts
specs/: semantic-search-enrichment.md  semantic-search.md
src/mcp_server_roam/: __init__.py  __main__.py  config.py  embedding.py  markdown_utils.py  roam_api.py  roam_api.py.bak  server.py  simple_server.py  vector_store.py
tests/: __init__.py  test_cli.py  test_client.py  test_e2e.py  test_e2e_search.py  test_embedding.py  test_mcp_tools.py  test_roam_api.py  test_roam_api_unit.py  test_server.py  test_server_unit.py  test_vector_store.py
