[project]
name = "mcp-server-roam"
version = "0.1.0"
description = "A Model Context Protocol server providing tools to interact with Roam Research's functionality programmatically via LLMs"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Matt Sweeney" }]
keywords = ["roam", "mcp", "llm", "knowledge-graph"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "click>=8.1.7",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.30.0",
]

[project.scripts]
mcp-server-roam = "mcp_server_roam:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.389",
    "ruff>=0.7.3",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-rerunfailures>=14.0",
    "black>=24.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"